--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@material-tailwind/react": "^2.1.9",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "formik": "^2.4.5",
