--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.50.1",
     "react-router-dom": "^6.22.0",
     "sweetalert2": "^11.10.5",
+    "use-react-countries": "^2.0.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
