--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-tailwind/react": "^2.1.9",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
+    "emailjs-com": "^3.2.0",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
