--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.50.1",
     "react-router-dom": "^6.22.0",
+    "react-toastify": "^10.0.4",
     "sweetalert2": "^11.10.5",
     "use-react-countries": "^2.0.0",
     "yup": "^1.3.3"
